Introduce Secret Storage to encrypt sensitive data for components